--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "connect": ">= 2.4.5",
     "express": ">= 2.5.11",
     "jade": ">= 0.27.2",
-    "request": ">= 2.11.5",
+    "request": "git://github.com/mikeal/request.git",
     "nconf": "git://github.com/flatiron/nconf.git",
     "passport": ">= 0.1.12",
     "passport-appdotnet": ">= 0.1.1",
