--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "connect-redis": ">= 1.4.4",
     "socket.io": "git://github.com/LearnBoost/socket.io.git",
     "hiredis": "0.1.14",
-    "redis": "0.7.2"
+    "redis": "0.7.2",
+    "requirejs": "<= 2.1.0"
   },
   "devDependencies": {
     "mocha": ">= 1.4.2",
