--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "connect-redis": ">= 1.4.4",
     "hiredis": "0.1.14",
     "redis": "0.7.2",
-    "requirejs": "<= 2.1.0"
+    "requirejs": ">= 2.1.0",
+    "connect-slashes": ">= 0.0.2"
   },
   "devDependencies": {
     "mocha": ">= 1.4.2",
