--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "connect": ">= 2.4.5",
-    "express": ">= 2.5.11",
-    "jade": ">= 0.27.2",
-    "request": "git://github.com/mikeal/request.git",
-    "nconf": "git://github.com/flatiron/nconf.git",
-    "passport": ">= 0.1.12",
+    "connect": "2.7.6",
+    "express": "3.2.0",
+    "jade": "0.29.0",
+    "request": "2.16.6",
+    "nconf": "0.6.7",
+    "passport": "0.1.16",
     "passport-appdotnet": ">= 0.1.1",
-    "connect-redis": ">= 1.4.4",
-    "hiredis": "0.1.14",
-    "redis": "0.7.2",
-    "requirejs": ">= 2.1.0",
-    "xtend": "1.0.x"
+    "connect-redis": "1.4.5",
+    "hiredis": "0.1.15",
+    "redis": "0.8.3",
+    "requirejs": "2.1.5",
+    "xtend": "2.0.x"
   },
   "devDependencies": {
     "mocha": ">= 1.4.2",
