--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
   },
   "dependencies": {
     "connect": "2.7.6",
-    "express": "3.2.0",
+    "express": ">=3.11.0",
     "pug": "latest",
-    "request": "2.16.6",
-    "nconf": "0.8.4",
-    "passport": "0.1.16",
+    "request": ">=2.68.0",
+    "nconf": "0.10.0",
+    "passport": "0.4.0",
     "passport-pnut": ">= 0.1.1",
-    "connect-redis": "1.4.5",
+    "connect-redis": "3.4.0",
     "hiredis": "0.1.15",
     "redis": "2.6.3",
     "requirejs": "2.1.5",
-    "xtend": "2.0.x"
+    "xtend": "2.0.x",
+    "express-session": ">=1.15.6",
+    "body-parser": ">=1.18.3",
+    "method-override": ">=3.0.0",
+    "cookie-parser": ">=1.4.0",
+    "csurf": ">=1.9.0",
+    "errorhandler": ">=1.5.0",
+    "morgan": ">=1.9.1",
+    "multer": "^0.1.3"
   },
   "devDependencies": {
     "mocha": ">= 1.4.2",
@@ -26,6 +34,7 @@
     "should": ">= 1.1.1"
   },
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "start": "node app.js"
   }
 }
