--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "noodleapp",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "private": true,
   "engines": {
-    "node": ">= 0.8.9",
-    "npm": "1.4.x"
+    "node": ">= 16.14.0",
+    "npm": "8.3.1"
   },
   "dependencies": {
-    "connect": "3.7.0",
-    "express": ">=3.11.0",
-    "pug": "latest",
-    "request": ">=2.68.0",
-    "nconf": "0.10.0",
-    "passport": "0.4.0",
-    "passport-pnut": ">= 0.1.1",
-    "connect-redis": "3.4.0",
-    "hiredis": "0.1.15",
-    "redis": "2.6.3",
-    "requirejs": "2.1.5",
-    "xtend": "2.0.x",
-    "express-session": ">=1.15.6",
     "body-parser": ">=1.18.3",
-    "method-override": ">=3.0.0",
-    "cookie-parser": ">=1.4.0",
-    "csurf": ">=1.9.0",
-    "errorhandler": ">=1.5.0",
-    "morgan": ">=1.9.1",
-    "multer": "^0.1.3"
+    "connect": "^3.7.0",
+    "connect-redis": "^3.4.2",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "nconf": "^0.11.3",
+    "passport": "^0.5.2",
+    "passport-pnut": "^0.1.1",
+    "pug": "^3.0.2",
+    "redis": "^2.6.4",
+    "request": "^2.88.2",
+    "requirejs": "^2.3.6",
+    "xtend": "^4.0.2"
   },
   "devDependencies": {
     "mocha": ">= 1.4.2",
